2014-06-29  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/Makefile.am, header/Makefile.in, header/p16c54.inc,
    header/p16c54a.inc, header/p16c54c.inc, header/p16c55.inc,
    header/p16c55a.inc, header/p16c56.inc, header/p16c56a.inc,
    header/p16c57.inc, header/p16c57c.inc, header/p16c58a.inc,
    header/p16c58b.inc, header/p16cr54.inc, header/p16cr54a.inc,
    header/p16cr54c.inc, header/p16cr56a.inc, header/p16cr57a.inc,
    header/p16cr57b.inc, header/p16cr57c.inc, header/p16cr58a.inc,
    header/p16cr58b.inc:
    This is an old deficiency repair of, only for the sake of completeness.

2014-06-28  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/Makefile.am, header/Makefile.in, header/p16cr620a.inc:
    This is an old deficiency repair of, only for the sake of completeness.

2014-06-28  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c, gpasm/util.c, gplink/gplink.c
    Renamed some constants.
    Renamed core_size to core_mask.

  * gpasm/gpasm.c:
    Renamed inhx32 to INHX32.

  * gplink/lst.c, gputils/gpvo.c:
    Use the GPDIS_SHOW_ALL_BRANCH instead of GPDIS_SHOW_NOTHING.

  * gputils/testsuite/test,
    gputils/testsuite/gpdasm.project/op12e_new_conf.asm,
    gputils/testsuite/gpdasm.project/op14_new_conf.asm,
    gputils/testsuite/gpdasm.project/op14e_new_conf.asm,
    gputils/testsuite/gpdasm.project/op16e_new_conf.asm:
    Renamed this files:
      op12e_mpasm_conf.asm ==> op12e_new_conf.asm
      op14_mpasm_conf.asm ==> op14_new_conf.asm
      op14e_mpasm_conf.asm ==> op14e_new_conf.asm
      op16e_mpasm_conf.asm ==> op16e_new_conf.asm

  * gputils/gpdasm.c, libgputils/gpprocessor.c, libgputils/gpprocessor.h:
    A bit more serious support of the SX family.

  * libgputils/gpdis.c:
    More accurate recognition of labels.

  * libgputils/gpdis.h:
    New constant: GPDIS_SHOW_ALL_BRANCH

  * libgputils/gpopcode.c, libgputils/gpopcode.h, libgputils/gpreadhex.c,